crates/oxc_linter_rules/src/snapshots/react_no_did_update_set_state.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate: function() {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate: function componentDidUpdate() {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate() {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate = () => {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate: function() {
 4 │                 this.setState({ data: 1 });
   ·                 ─────────────
 5 │                 someClass.onSomeEvent(function(data) {
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:19]
 4 │                 if (true) {
 5 │                   this.setState({ data: 123 });
   ·                   ─────────────
 6 │                 }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:19]
 4 │                 if (true) {
 5 │                   this.setState({ data: 123 });
   ·                   ─────────────
 6 │                 }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:34]
 3 │               componentDidUpdate() {
 4 │                 const x = true ? this.setState({ data: 123 }) : null;
   ·                                  ─────────────
 5 │               }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate: function() {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:19]
 4 │                 someClass.onSomeEvent(function(data) {
 5 │                   this.setState({
   ·                   ─────────────
 6 │                     data: data
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:19]
 4 │                 setTimeout(() => {
 5 │                   this.setState({ data: 123 });
   ·                   ─────────────
 6 │                 }, 100);
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:19]
 4 │                 Promise.resolve().then(() => {
 5 │                   this.setState({ data: 123 });
   ·                   ─────────────
 6 │                 });
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate() {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   data: data
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:5:19]
 4 │                 someClass.onSomeEvent(function(data) {
 5 │                   this.setState({
   ·                   ─────────────
 6 │                     data: data
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:49]
 3 │               componentDidUpdate: function() {
 4 │                 someClass.onSomeEvent((data) => this.setState({data: data}));
   ·                                                 ─────────────
 5 │               }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:49]
 3 │               componentDidUpdate() {
 4 │                 someClass.onSomeEvent((data) => this.setState({data: data}));
   ·                                                 ─────────────
 5 │               }
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate: function() {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.

  ⚠ react(no-did-update-set-state): Do not use `setState` in `componentDidUpdate`.
   ╭─[no_did_update_set_state.tsx:4:17]
 3 │               componentDidUpdate() {
 4 │                 this.setState({
   ·                 ─────────────
 5 │                   name: this.props.name.toUpperCase()
   ╰────
  help: Updating state after a component update triggers a second render() call and can lead to property/layout thrashing.
